fixes various layout issues

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,7 +19,7 @@
 
 /* Pill Sizes */
 .pill-sm {
-  @apply px-14 py-2 h-25 text-md lg:text-lg lg:px-16 lg:h-32;
+  @apply px-14 py-2 min-h-25 text-md lg:text-lg lg:px-16 lg:min-h-32;
 }
 
 .pill-lg {
